<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.esisalama.tfcproject.viewModel.ProductViewModel" />

        <variable
            name="adapter"
            type="com.esisalama.tfcproject.adapter.ProductCartAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddPaymentActivity">

        <TextView
            android:textColor="@android:color/black"
            android:id="@+id/textView2"
            style="@style/TextAppearance.AppCompat.Display2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_total_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:text="@{@string/txt_formatted_sold(viewModel.totalPrice)}"
            android:id="@+id/textView3"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="1400 USD" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListProduct"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/item_product_cart"
            app:setAdapter="@{adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_finish"
            android:onClick="finishAction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAddProduct"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp" />

        <Button
            android:onClick="addAction"
            android:id="@+id/btnAddProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/txt_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnFinish"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>